// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ThSortableContainer /> Should render ThSortableContainer with no sortable button 1`] = `
<DocumentFragment>
  sortable
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
  />
</DocumentFragment>
`;

exports[`<ThSortableContainer /> Should render ThSortableContainer with sortable button for firstname column 1`] = `
<DocumentFragment>
  sortable
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-undefined"
  />
</DocumentFragment>
`;

exports[`SortingIcon Should render SortingIcon with order equal NONE 1`] = `
<DocumentFragment>
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-sorting"
  />
</DocumentFragment>
`;

exports[`SortingIcon Should render SortingIcon with order equal false 1`] = `
<DocumentFragment>
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-undefined"
  />
</DocumentFragment>
`;

exports[`SortingIcon Should render SortingIcon with order equal true 1`] = `
<DocumentFragment>
  <span
    class="af-btn__icon af-btn__icon--table-sorting glyphicon glyphicon-undefined"
  />
</DocumentFragment>
`;
